criado os logos e ico do site

--- a/src/app/pages/not-logged/home/login.html
+++ b/src/app/pages/not-logged/home/login.html
@@ -1,6 +1,9 @@
-<div style="background-color: rgb(140, 123, 123);">
+<div id="login-page">
+    
+</div>
+
+<div id="login-page-content">
     <app-header/>
-    <p>Home works!</p>
-    <app-login/>
+    <app-sign-in/>
 </div>
 
