--- a/src/app/components/not-logged/header/header.html
+++ b/src/app/components/not-logged/header/header.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div id="header"> 
+    <div class="logo">
+        <img src="/images/movieflx-image.png" alt="logo">
+    </div>
+</div>
