--- a/src/app/components/not-logged/sign-up/sign-up.html
+++ b/src/app/components/not-logged/sign-up/sign-up.html
@@ -1,1 +1,43 @@
-<p>sign-up Cadastro</p>
+<div id="sign-up-container" class="d-flex justify-content-center align-items-center">
+    <div class="sign-up-card">
+        <h1 class="sign-up-title">Cadastre-se</h1>
+        
+        <form class="sign-up-form">
+            <div class="mb-3">
+                <input 
+                    type="text" 
+                    class="form-control sign-up-input" 
+                    placeholder="Seu nome completo"
+                    id="nomeCompleto"
+                >
+            </div>
+            <div class="mb-3">
+                <input 
+                    type="text" 
+                    class="form-control sign-up-input" 
+                    placeholder="Seu melhor e-mail"
+                    id="email"
+                >
+            </div>
+            <div class="mb-3">
+                <input 
+                    type="password" 
+                    class="form-control sign-up-input" 
+                    placeholder="Sua senha"
+                    id="password"
+                >
+            </div>
+            
+            <button type="submit" class="btn sign-up-button w-100 mb-3">
+                Entrar na conta
+            </button>
+
+        </form>
+        
+        <div class="text-center sign-up-prompt">
+            <span>Já tem sua conta? </span>
+            <a href="/login" class="sign-up-link">Faça login</a>
+        </div>
+    </div>
+</div>
+
