--- a/src/app/pages/not-logged/home/login.css
+++ b/src/app/pages/not-logged/home/login.css
@@ -16,3 +16,13 @@
     width: 100%;
     height: 100%;
 }
+
+#login-container {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 100px;
+    box-sizing: border-box;
+    overflow: hidden;
+}
