--- a/src/app/pages/not-logged/home/login.html
+++ b/src/app/pages/not-logged/home/login.html
@@ -4,6 +4,8 @@
 
 <div id="login-page-content">
     <app-header/>
-    <app-sign-in/>
+    <div id="login-container">
+        <app-sign-in/>
+    </div>
 </div>
 
