--- a/src/app/pages/not-logged/registration/registration.html
+++ b/src/app/pages/not-logged/registration/registration.html
@@ -1,2 +1,11 @@
-<app-header/>
-<app-sign-up/>
+<div id="registration-page">
+    
+</div>
+
+<div id="registration-page-content">
+    <app-header/>
+    <div id="registration-container">
+        <app-sign-up/>
+    </div>
+</div>
+
