criada a barra do header da tela inicial de logada, css e html

--- a/src/app/components/logged/header/header.html
+++ b/src/app/components/logged/header/header.html
@@ -1,1 +1,26 @@
-<p>header works!</p>
+<div id="header"> 
+    <div class="logo">
+        <img src="/images/movieflx-image.png" alt="logo">
+    </div>
+    
+    <nav class="nav-links">
+        <a href="#" class="nav-link">Início</a>
+        <a href="#" class="nav-link">Séries</a>
+        <a href="#" class="nav-link">Filmes</a>
+        <a href="#" class="nav-link">Originais</a>
+        <a href="#" class="nav-link">Novidades</a>
+    </nav>
+    
+    <div class="right-section">
+        <div class="search-container">
+            <input type="text" class="search-input" placeholder="Search">
+            <svg class="search-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M11.7422 10.3439C12.5329 9.2673 13 8.01432 13 6.5C13 2.91015 10.0899 0 6.5 0C2.91015 0 0 2.91015 0 6.5C0 10.0899 2.91015 13 6.5 13C8.01432 13 9.2673 12.5329 10.3439 11.7422L14.2929 15.6914C14.6834 16.0819 15.3166 16.0819 15.7071 15.6914C16.0976 15.3009 16.0976 14.6677 15.7071 14.2772L11.7422 10.3439ZM12 6.5C12 9.53757 9.53757 12 6.5 12C3.46243 12 1 9.53757 1 6.5C1 3.46243 3.46243 1 6.5 1C9.53757 1 12 3.46243 12 6.5Z" fill="#8c8c8c"/>
+            </svg>
+        </div>
+        
+        <div class="avatar-container">
+            <img src="/images/avatar.jpg" alt="Avatar" class="avatar">
+        </div>
+    </div>
+</div>
