--- a/src/app/pages/logged/home/home.html
+++ b/src/app/pages/logged/home/home.html
@@ -1,7 +1,49 @@
 <app-header/>
-<!--<div>
-    <app-card/>
-    <app-card/>
-    <app-card/>
-    <app-card/>
-</div>-->
+
+<main class="home-container">
+  <section class="cards-grid">
+    <app-card
+      [title]="'O Poderoso Chefão'"
+      [description]="'Don Corleone, chefe da máfia, precisa passar o legado para seu filho Michael, que reluta em assumir os negócios da família.'"
+      [duration]="'1:30h'"
+      [ageRating]="'Somente +18'"
+      [approval]="67"
+      [provider]="'NETFLIX'"
+      [isTop10]="true"
+      [topLabel]="'TOP 10'"
+    ></app-card>
+
+    <app-card
+      [title]="'Casablanca'"
+      [description]="'Durante a Segunda Guerra Mundial, um exilado americano precisa escolher entre o amor da sua vida e ajudar um líder da resistência.'"
+      [duration]="'1:40h'"
+      [ageRating]="'Somente +18'"
+      [approval]="82"
+      [provider]="'NETFLIX'"
+      [isTop10]="true"
+      [topLabel]="'TOP 10'"
+    ></app-card>
+
+    <app-card
+      [title]="'Cidadão Kane'"
+      [description]="'A história de Charles Foster Kane, um magnata da imprensa que morre dizendo Rosebud e desperta um jornalista a investigar sua vida.'"
+      [duration]="'2:00h'"
+      [ageRating]="'Somente +18'"
+      [approval]="91"
+      [provider]="'CLARO TV'"
+      [isTop10]="true"
+      [topLabel]="'TOP 10'"
+    ></app-card>
+
+    <app-card
+      [title]="'Oppenheimer'"
+      [description]="'A história real do cientista que liderou a criação da bomba atômica, mudando o curso da humanidade para sempre.'"
+      [duration]="'3:00h'"
+      [ageRating]="'Somente +18'"
+      [approval]="93"
+      [provider]="'APPLE TV+'"
+      [isTop10]="true"
+      [topLabel]="'TOP 10'"
+    ></app-card>
+  </section>
+</main>
