adicionado routerLinks e routerLinkActive, fazendo a tela não precisar ser carregada pelo DOM entre as transições de tela

--- a/src/app/components/logged/header/header.html
+++ b/src/app/components/logged/header/header.html
@@ -9,6 +9,7 @@
         <a href="#" class="nav-link">Filmes</a>
         <a href="#" class="nav-link">Originais</a>
         <a href="#" class="nav-link">Novidades</a>
+        <a [routerLink]="['/novo-filme']" routerLinkActive="active" class="nav-link">Cadastrar novo filme</a>
     </nav>
     
     <div class="right-section">
