--- a/src/app/components/not-logged/sign-in/sign-in.html
+++ b/src/app/components/not-logged/sign-in/sign-in.html
@@ -26,13 +26,13 @@
             </button>
             
             <div class="text-center mb-4">
-                <a href="/cadastre-se" class="forgot-password-link">Esqueci minha senha</a>
+                <a [routerLink]="['/cadastre-se']" class="forgot-password-link">Esqueci minha senha</a>
             </div>
         </form>
         
         <div class="text-center sign-up-prompt">
             <span>Novo por aqui? </span>
-            <a href="/cadastre-se" class="sign-up-link">Assine agora</a>
+            <a [routerLink]="['/cadastre-se']" class="sign-up-link">Assine agora</a>
         </div>
     </div>
 </div>
