--- a/src/app/components/not-logged/sign-up/sign-up.html
+++ b/src/app/components/not-logged/sign-up/sign-up.html
@@ -36,7 +36,7 @@
         
         <div class="text-center sign-up-prompt">
             <span>Já tem sua conta? </span>
-            <a href="/login" class="sign-up-link">Faça login</a>
+            <a [routerLink]="['/login']" class="sign-up-link">Faça login</a>
         </div>
     </div>
 </div>
