adicionado rota de registrar-se com o backend

--- a/src/app/components/not-logged/sign-in/sign-in.html
+++ b/src/app/components/not-logged/sign-in/sign-in.html
@@ -49,7 +49,7 @@
         
         <div class="text-center sign-up-prompt">
             <span>Novo por aqui? </span>
-            <a [routerLink]="['/cadastre-se']" class="sign-up-link">Assine agora</a>
+            <a [routerLink]="['/cadastre-se']" class="sign-up-link">Cadastre-se agora</a>
         </div>
     </div>
 </div>
