--- a/src/app/components/logged/header/header.html
+++ b/src/app/components/logged/header/header.html
@@ -62,6 +62,14 @@
                     <li class="nav-item">
                         <a [routerLink]="['/novo-filme']" routerLinkActive="active" class="nav-link">Cadastrar novo filme</a>
                     </li>
+                    <li class="nav-item">
+                        <a [routerLink]="['/login']" class="nav-link d-flex align-items-center gap-1" (click)="logout()">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" viewBox="0 0 24 24" style="vertical-align:middle;">
+                                <path d="M16 17l5-5m0 0l-5-5m5 5H9m4 5v1a2 2 0 01-2 2H6a2 2 0 01-2-2V6a2 2 0 012-2h5a2 2 0 012 2v1" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            Sair
+                        </a>
+                    </li>
                 </ul>
                 <!-- Right: Search and Avatar -->
                 <div 
