--- a/src/app/pages/logged/home/home.html
+++ b/src/app/pages/logged/home/home.html
@@ -14,6 +14,7 @@
   <!-- Grade de filmes -->
   <section class="cards-grid" *ngIf="!isLoading && !errorMessage">
     <ng-container *ngFor="let card of cards">
+      <!-- {{card | json}} -->
       <app-card
         [title]="card.title"
         [description]="card.description"
